--- a/projects/Basic-Portfolio/index.html
+++ b/projects/Basic-Portfolio/index.html
@@ -1,41 +1,52 @@
 <!DOCTYPE html>
-<html lang="en-us">
 
-<head>
-  <meta charset="UTF-8">
-  <title>Portfolio</title>
-</head>
+<html 
 
-<body>
-  <header>
-    <h1>Nare Baghumyan</h1>
-  </header>
-
-  <div>
-
-    <section>
-
-      <h2>About Me</h2>
-
-      <img src="https://placehold.it/200x200" alt="Nare Baghumyan">
-
-      <p>Write a short paragraph or two about yourself, or use placeholder text from <a href="http://www.lipsum.com/">www.lipsum.com</a></p>
-    </section>
-
-    <h3>Nare Baghumyan</h3>
-    <section>
-      <h4>Contact</h4>
-      <ul>
-        <li><strong>Name:</strong> <a href="#">Nare Baghumyan</a></li>
-        <li><strong>Email:</strong> <a href="#">narebaghumyan@gmail.com</a></li>
-        <li><strong>Massage:</strong> <a href="#"></a></li>
-      </ul>
-      <h5>Nare Baghumyan</h5>
-
-      <h6>Portfolio</h6>
-    </section>
-  </div>
-
-</body>
+lang="en-us"> 
 
 </html>
+
+<head>
+
+  <title>About Me</title>
+
+  <link rel="stylesheet" href="assets/css/style.css">
+
+</head>
+
+  
+<body>
+
+<header>
+      <nav id="nav">
+          <div>
+            <span>Nare Baghumyan</span>
+          </div>
+          <div id="nav-menu">
+            <a href="../Basic-Portfolio/index.html" alt="About Me">About</a>
+            <a href="../Basic-Portfolio/portfolio.html" alt="My Portfolio">Portfolio</a>
+            <a href="../Basic-Portfolio/contact.html" alt="Contact Information">Contact</a>
+          </div>
+      </nav>  
+</header>
+
+  
+
+    <section class="wrapper-main">
+      <div class="clearfix">
+        <h1>About Me</h1>
+
+      <img src="assets/images/IMG_0013.jpg" alt="Nare Baghumyan">
+
+      <p>I was born on December 7th, 1989 in Armenia.
+        I studied at Yerevan Medical college where I earned a Bachelor's degree in Chemistry. 
+        I have 10 years of experience working in the medical field and continue to pursue a higher education. 
+        I am a self-motivated person who enjoys challenges and works well under pressure both as an individual and with others. 
+        My personality strengths are my persistence and determination to see that I complete a task that I've set forth to do regardless of the complications.
+        A weakness of mine would be my tendency of exhausting myself when setting on a course to complete my goals. </p>
+      </div>
+      </section>
+
+      <div class="footer">
+      Copyright ©
+      </div>
