--- a/projects/Basic-Portfolio/contact.html
+++ b/projects/Basic-Portfolio/contact.html
@@ -1,43 +1,56 @@
-<!DOCTYPE html>
-
-<html 
-
-lang="en-us"> 
-
-</html>
+<!doctype html>
+<html lang="en-us">
 
 <head>
-
-  <title>About Me</title>
-
-  <link rel="stylesheet" href="assets/css/style.css">
-
+  <meta charset="UTF-8">
+  <title>Contact | Your Name</title>
+  <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
 
-  
 <body>
 
-<header>
-      <nav id="nav">
-          <div>
-            <span>Nare Baghumyan</span>
-          </div>
-          <div id="nav-menu">
-            <a href="../Basic-Portfolio/index.html" alt="About Me">About</a>
-            <a href="../Basic-Portfolio/portfolio.html" alt="My Portfolio">Portfolio</a>
-            <a href="../Basic-Portfolio/contact.html" alt="Contact Information">Contact</a>
-          </div>
-      </nav>  
-</header>
+  <header id="masthead">
+    <div class="container">
+      <a href="index.html" id="logo">Your Name</a>
+      <nav>
+        <a href="index.html">About</a>
+        <a href="portfolio.html">Portfolio</a>
+        <a href="contact.html">Contact</a>
+      </nav>
+    </div>
+  </header>
 
-    <h2>Contact</h2>
-    <ul>
-      <li><strong>Name:</strong> <a href="#"></a></li>
-      <li><strong>Email:</strong> <a href="#"></a></li>
-      <li><strong>Massage:</strong> <a href="#"></a></li>
-    </ul>
-    
+  <div id="main-container" class="container">
+    <section class="main-section">
+      <h1>Contact</h1>
 
-    <div class="footer">
-        Copyright ©
-        </div>
+      <form id="contact-form">
+        <ul>
+          <li>
+            <label for="name">Name</label>
+            <input type="text" id="name" name="name" placeholder="John Smith" required="required">
+          </li>
+          <li>
+            <label for="email">Email</label>
+            <input type="email" id="email" name="email" placeholder="example@gmail.com" required="required">
+          </li>
+          <li>
+            <label for="message">Message</label>
+            <textarea id="message" name="message" required="required"></textarea>
+          </li>
+        </ul>
+        <input type="submit">
+      </form>
+
+    </section>
+
+  </div>
+
+  <footer>
+    <div class="container">
+      Copyright &copy; 
+    </div>
+  </footer>
+</body>
+
+</html>
