--- a/projects/Basic-Portfolio/index.html
+++ b/projects/Basic-Portfolio/index.html
@@ -1,52 +1,48 @@
-<!DOCTYPE html>
-
-<html 
-
-lang="en-us"> 
-
-</html>
+<!doctype html>
+<html lang="en-us">
 
 <head>
-
-  <title>About Me</title>
-
-  <link rel="stylesheet" href="assets/css/style.css">
-
+  <meta charset="UTF-8">
+  <title>About | Your Name</title>
+  <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
 
-  
 <body>
 
-<header>
-      <nav id="nav">
-          <div>
-            <span>Nare Baghumyan</span>
-          </div>
-          <div id="nav-menu">
-            <a href="../Basic-Portfolio/index.html" alt="About Me">About</a>
-            <a href="../Basic-Portfolio/portfolio.html" alt="My Portfolio">Portfolio</a>
-            <a href="../Basic-Portfolio/contact.html" alt="Contact Information">Contact</a>
-          </div>
-      </nav>  
-</header>
+  <header id="masthead">
+    <div class="container">
+      <a href="index.html" id="logo">Nare Baghumyan</a>
+      <nav>
+        <a href="index.html">About</a>
+        <a href="portfolio.html">Portfolio</a>
+        <a href="contact.html">Contact</a>
+      </nav>
+    </div>
+  </header>
 
-  
+  <div id="main-container" class="container">
+    <section class="main-section">
+      <h1>About Me</h1>
 
-    <section class="wrapper-main">
-      <div class="clearfix">
-        <h1>About Me</h1>
-
-      <img src="assets/images/IMG_0013.jpg" alt="Nare Baghumyan">
+      <img src="assets/images/IMG_0013.jpg" class="auth-image" alt="Your Name">
 
       <p>I was born on December 7th, 1989 in Armenia.
         I studied at Yerevan Medical college where I earned a Bachelor's degree in Chemistry. 
         I have 10 years of experience working in the medical field and continue to pursue a higher education. 
         I am a self-motivated person who enjoys challenges and works well under pressure both as an individual and with others. 
         My personality strengths are my persistence and determination to see that I complete a task that I've set forth to do regardless of the complications.
-        A weakness of mine would be my tendency of exhausting myself when setting on a course to complete my goals. </p>
-      </div>
-      </section>
+        A weakness of mine would be my tendency of exhausting myself when setting on a course to complete my goals. 
+    </p>
 
-      <div class="footer">
-      Copyright ©
-      </div>
+    </section>
+
+  </div>
+
+  <footer>
+    <div class="container">
+      Copyright &copy; 
+    </div>
+  </footer>
+</body>
+
+</html>
