--- a/projects/Basic-Portfolio/portfolio.html
+++ b/projects/Basic-Portfolio/portfolio.html
@@ -1,82 +1,64 @@
-<!DOCTYPE html>
-
-<html 
-
-lang="en-us"> 
-
-</html>
+<!doctype html>
+<html lang="en-us">
 
 <head>
-
-  <title>Portfolio</title>
-
-  <link rel="stylesheet" href="assets/css/style.css">
-
+  <meta charset="UTF-8">
+  <title>Portfolio | Your Name</title>
+  <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
 
-  
 <body>
 
-<header>
-      <nav id="nav">
-          <div>
-            <span>Nare Baghumyan</span>
-          </div>
-          <div id="nav-menu">
-            <a href="../Basic-Portfolio/index.html" alt="About Me">About</a>
-            <a href="../Basic-Portfolio/portfolio.html" alt="My Portfolio">Portfolio</a>
-            <a href="../Basic-Portfolio/contact.html" alt="Contact Information">Contact</a>
-          </div>
-      </nav>  
-</header>
+  <header id="masthead">
+    <div class="container">
+      <a href="index.html" id="logo">Nare Baghumyan</a>
+      <nav>
+        <a href="index.html">About</a>
+        <a href="portfolio.html">Portfolio</a>
+        <a href="contact.html">Contact</a>
+      </nav>
+    </div>
+  </header>
 
-        <section class="wrapper-main">
+  <div id="main-container" class="container">
+    <section class="main-section">
+      <h1>Portfolio</h1>
 
-            <h1>Portfolio</h1>
-            <hr>
+      <div class="work">
+        <img src="assets/images/untitled 1.jpeg" alt="untitled project">
+        
+        <h3>Untitled project</h3>
+      </div>
+      <div class="work">
+        <img src="assets/images/untitled 2.jpg" alt="untitled project">
 
-            <div class="root-frame">
+        <h3>Untitled project</h3>
+      </div>
+      <div class="work">
+        <img src="assets/images/untitled 3.png" alt="untitled project">
 
-                <div class="box1">
-                    <img src="../Basic-Portfolio/assets/images/bunny.jpg" alt="Cute Bunnies">
-                        <div class="title">
-                            BUNNIES
-                        </div>
-                </div>
+        <h3>Untitled project</h3>
+      </div>
+      <div class="work">
+        <img src="assets/images/untitled 4.jpeg" alt="untitled project">
 
-                <div class="box2">
-                    <img src="../Basic-Portfolio/assets/images/puppy.jpeg" alt="Cute Puppies">
-                        <div class="title">
-                            PUPPIES
-                        </div>
-                </div>
+        <h3>Untitled project</h3>
+      </div>
+      <div class="work">
+        <img src="assets/images/untitled 5.jpg" alt="untitled project">
 
-                <div class="box3">
-                    <img src="../Basic-Portfolio/assets/images/flower.jpeg" alt="Beautiful Flowers">
-                        <div class="title">
-                            FLOWERS
-                        </div>
-                </div>
+        <h3>Untitled project</h3>
+      </div>
 
-                <div class="box4">
-                    <img src="../Basic-Portfolio/assets/images/baby.jpg" alt="Cute Babies">
-                        <div class="title">
-                            BABIES
-                        </div>
-                </div>
+    </section>
 
-                <div class="box5">
-                    <img src="../Basic-Portfolio/assets/images/masis.jpg" alt="Ararat">
-                        <div class="title">
-                            SCENIC VIEWS
-                        </div>
-                </div>
+  </div>
 
-            </div>
-        </section>
+  <footer>
+    <div class="container">
+      Copyright &copy; 
+    </div>
+  </footer>
+</body>
 
-
-
-<div class="footer">
-        Copyright ©
-</div>
+</html>
